# keyhint

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  cov.xml  coverage.lcov  hello_world.py  pyproject.toml  requirements-dev.txt  run.sh  setup.cfg  setup.py
.github/workflows/: build-publish.yml  build.yml  coverage.yml  coveralls.yml  publish.yml  python.yml  test-build.yml  test.yml  tests.yml
data/: firefox.json  hints.yaml  index.json  vscode.json
keyhint/: ApplicationWindow.ui  __init__.py  __main__.py  app.py  binding.py  config.py  context.py  core.py  css.py  data_model.py  handler.py  headerbar.py  helpers.py  keyhint.py  sheets.py  style.css  utils.py  window.py  window.ui
keyhint/config/: alacritty.toml  all.yaml  cli.toml  config.yaml  firefox-tridactyl.toml  firefox.toml  firefox.yaml  foot.toml  foot.yaml  forge.toml  gh-copilot.toml  github.toml  gnome-terminal.toml  gnome-terminal.yaml  hints.yaml  hints.yaml2  keyhint.toml  kitty.toml  kitty.yaml  pop-shell.toml  pop-shell.yaml  tilix.toml  tilix.yaml  tmux.toml  tmux.yaml  tridactyl.toml  tridactyl.yaml  vim.toml  vim.yaml  vscode-copilot.toml  vscode-neovim.toml  vscode.toml  vscode.yaml  www-github.toml  www-github.yaml
keyhint/handlers/: abstract_handler.py  detect_application_handler.py  load_configs_handler.py  load_hints_handler.py  load_index_handler.py  select_hints_handler.py  show_hints_handler.py  show_window_handler.py
keyhint/resources/: ApplicationWindow.glade  ApplicationWindow.ui  header_bar.ui  headerbar.ui  keyhint.cmb  keyhint.ui  style.css  window.ui
pyshortcut/: __init__.py  __main__.py  core.py  helpers.py  shortcuts.py
pyshortcuts/: core.py  data_model.py  display.py  helpers.py  shortcuts.py
pyshortcuts/handlers/: active_window_handler.py  load_index_handler.py  load_shortcuts_handler.py  show_window_handler.py
src/keyhint/: __main__.py  app.py  utils.py  window.py
src/keyhint.dist-info/: METADATA
src/keyhint/config/: firefox.yaml  tilix.yaml  vscode.yaml
src/keyhint/resources/: ApplicationWindow.glade
src/tests/: test_utils.py
tests/: context.py  test_core.py  test_data.py  test_data_model.py  test_handlers_load_configs_handler.py  test_helpers.py  test_sheets.py  test_utils.py
